--- a/.env.sample
+++ b/.env.sample
@@ -14,3 +14,6 @@ NEONDB_DIRECT_URL = ''
 SENDGRID_API_KEY = ''
 EMAIL_FROM = 'aayushmaan.soni54@gmail.com'
 SENDGRID_DYNAMIC_TEMPLATE_ID = ''
+
+# VERCEL CRON JOB ENVs
+CRON_SECRET = ""
